--- a/hive/pom.xml
+++ b/hive/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <!--pppp-->
+    <!--ppppttt-->
     <artifactId>hive</artifactId>
     <properties>
         <hive.version>1.2.1</hive.version>
